<resources>
    <string name="app_name">TodoPersistenceApp</string>
    <string name="todo_title">todo title</string>
    <string name="todo_title_hint">todo title hint</string>
    <string name="todo_title_label">One line description of the todo</string>
    <string name="todo_detail_label">detail of what to do</string>
    <string name="todo_complete_label">is it complete?</string>
    <string name="todo_date">Todo date</string>
    <string name="todo">TODO</string>
    <string name="take_photo">Take Photo</string>
</resources>
